fix z-index in right div when item is clicked

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,11 @@ section {
     outline: none;
 }
 
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+    z-index: 3 !important;
+    position: relative;
+}
+
 .container-fluid {
     position: relative;
     height: 500px;
